--- a/alexnet/alexnet_predict.ipynb
+++ b/alexnet/alexnet_predict.ipynb
@@ -11,7 +11,10 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "import tensorflow as tf\n",
-    "import time"
+    "import cv2\n",
+    "import time\n",
+    "import os\n",
+    "import glob"
    ]
   },
   {
@@ -20,9 +23,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = 'data/train.record'\n",
-    "save_path = 'model/alexnet/alexnet.ckpt'\n",
-    "\n",
+    "test_dir = '../data/test'\n",
+    "save_dir = '../model/alexnet'\n",
+    "size = (227, 227)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "name_id_map = {'cat': 0, 'dog': 1}\n",
     "id_name_map = {id:name for name, id in name_id_map.items()}\n",
     "n_classes = len(name_id_map)\n",
@@ -76,22 +87,18 @@
     "    # batch normalization\n",
     "    # y = (x - batch_mean) / sqrt(batch_var + epsilon)\n",
     "    # z = scale * y + offset\n",
-    "    scale1 = tf.Variable(tf.ones([channels1]), name='scale1')\n",
-    "    offset1 = tf.Variable(tf.zeros(channels1), name='offset1')\n",
     "    mean1 = tf.Variable(tf.zeros([channels1]), trainable=False, name='mean1')\n",
     "    var1 = tf.Variable(tf.ones([channels1]), trainable=False, name='var1')\n",
-    "    batch_mean1, batch_var1 = tf.nn.moments(conv1, [0, 1, 2])\n",
     "    epsilon1 = 0.0001\n",
-    "    train_mean1 = tf.assign(mean1, mean1 * 0.999 + batch_mean1 * 0.001)\n",
-    "    train_var1 = tf.assign(var1, var1 * 0.999 + batch_var1 * 0.001)\n",
-    "    with tf.control_dependencies([train_mean1, train_var1]):\n",
-    "        conv1 = tf.nn.batch_normalization(conv1, batch_mean1, batch_var1, offset1, scale1, epsilon1)\n",
+    "    scale1 = tf.Variable(tf.ones([channels1]), name='scale1')\n",
+    "    offset1 = tf.Variable(tf.zeros(channels1), name='offset1')\n",
+    "    conv1 = tf.nn.batch_normalization(conv1, mean1, var1, offset1, scale1, epsilon1)\n",
     "    conv1 = tf.nn.relu(conv1)\n",
     "    logging.info('weight1: name=%s, shape=%s', weight1.name, weight1.shape.as_list())\n",
-    "    logging.info('scale1: name=%s, shape=%s', scale1.name, scale1.shape.as_list())\n",
-    "    logging.info('offset1: name=%s, shape=%s', offset1.name, offset1.shape.as_list())\n",
     "    logging.info('mean1: name=%s, shape=%s', mean1.name, mean1.shape.as_list())\n",
     "    logging.info('var1: name=%s, shape=%s', var1.name, var1.shape.as_list())\n",
+    "    logging.info('scale1: name=%s, shape=%s', scale1.name, scale1.shape.as_list())\n",
+    "    logging.info('offset1: name=%s, shape=%s', offset1.name, offset1.shape.as_list())\n",
     "    logging.info('conv1.shape: %s', conv1.shape.as_list())\n",
     "\n",
     "    # L1: N*55*55*96 => LRN => N*55*55*96 \n",
@@ -129,22 +136,18 @@
     "    # batch normalization\n",
     "    # y = (x - batch_mean) / sqrt(batch_var + epsilon)\n",
     "    # z = scale * y + offset\n",
-    "    scale2 = tf.Variable(tf.ones([channels2]), name='scale2')\n",
-    "    offset2 = tf.Variable(tf.zeros(channels2), name='offset2')\n",
     "    mean2 = tf.Variable(tf.zeros([channels2]), trainable=False, name='mean2')\n",
     "    var2 = tf.Variable(tf.ones([channels2]), trainable=False, name='var2')\n",
-    "    batch_mean2, batch_var2 = tf.nn.moments(conv2, [0, 1, 2])\n",
     "    epsilon2 = 0.0001\n",
-    "    train_mean2 = tf.assign(mean2, mean2 * 0.999 + batch_mean2 * 0.001)\n",
-    "    train_var2 = tf.assign(var2, var2 * 0.999 + batch_var2 * 0.001)\n",
-    "    with tf.control_dependencies([train_mean2, train_var2]):\n",
-    "        conv2 = tf.nn.batch_normalization(conv2,             batch_mean2, batch_var2, offset2, scale2, epsilon2)\n",
+    "    scale2 = tf.Variable(tf.ones([channels2]), name='scale2')\n",
+    "    offset2 = tf.Variable(tf.zeros(channels2), name='offset2')\n",
+    "    conv2 = tf.nn.batch_normalization(conv2, mean2, var2, offset2, scale2, epsilon2)\n",
     "    conv2 = tf.nn.relu(conv2)\n",
     "    logging.info('weight2: name=%s, shape=%s', weight2.name, weight2.shape.as_list())\n",
-    "    logging.info('scale2: name=%s, shape=%s', scale2.name, scale2.shape.as_list())\n",
-    "    logging.info('offset2: name=%s, shape=%s', offset2.name, offset2.shape.as_list())\n",
     "    logging.info('mean2: name=%s, shape=%s', mean2.name, mean2.shape.as_list())\n",
     "    logging.info('var2: name=%s, shape=%s', var2.name, var2.shape.as_list())\n",
+    "    logging.info('scale2: name=%s, shape=%s', scale2.name, scale2.shape.as_list())\n",
+    "    logging.info('offset2: name=%s, shape=%s', offset2.name, offset2.shape.as_list())\n",
     "    logging.info('conv2.shape: %s', conv2.shape.as_list())\n",
     "\n",
     "    # L2: N*27*27*256 => LRN => N*27*27*256 \n",
@@ -182,22 +185,18 @@
     "    # batch normalization\n",
     "    # y = (x - batch_mean) / sqrt(batch_var + epsilon)\n",
     "    # z = scale * y + offset\n",
-    "    scale3 = tf.Variable(tf.ones([channels3]), name='scale3')\n",
-    "    offset3 = tf.Variable(tf.zeros(channels3), name='offset3')\n",
     "    mean3 = tf.Variable(tf.zeros([channels3]), trainable=False, name='mean3')\n",
     "    var3 = tf.Variable(tf.ones([channels3]), trainable=False, name='var3')\n",
-    "    batch_mean3, batch_var3 = tf.nn.moments(conv3, [0, 1, 2])\n",
     "    epsilon3 = 0.0001\n",
-    "    train_mean3 = tf.assign(mean3, mean3 * 0.999 + batch_mean3 * 0.001)\n",
-    "    train_var3 = tf.assign(var3, var3 * 0.999 + batch_var3 * 0.001)\n",
-    "    with tf.control_dependencies([train_mean3, train_var3]):\n",
-    "        conv3 = tf.nn.batch_normalization(conv3, batch_mean3, batch_var3, offset3, scale3, epsilon3)\n",
+    "    scale3 = tf.Variable(tf.ones([channels3]), name='scale3')\n",
+    "    offset3 = tf.Variable(tf.zeros(channels3), name='offset3')\n",
+    "    conv3 = tf.nn.batch_normalization(conv3, mean3, var3, offset3, scale3, epsilon3)\n",
     "    conv3 = tf.nn.relu(conv3)\n",
     "    logging.info('weight3: name=%s, shape=%s', weight3.name, weight3.shape.as_list())\n",
-    "    logging.info('scale3: name=%s, shape=%s', scale3.name, scale3.shape.as_list())\n",
-    "    logging.info('offset3: name=%s, shape=%s', offset3.name, offset3.shape.as_list())\n",
     "    logging.info('mean3: name=%s, shape=%s', mean3.name, mean3.shape.as_list())\n",
     "    logging.info('var3: name=%s, shape=%s', var3.name, var3.shape.as_list())\n",
+    "    logging.info('scale3: name=%s, shape=%s', scale3.name, scale3.shape.as_list())\n",
+    "    logging.info('offset3: name=%s, shape=%s', offset3.name, offset3.shape.as_list())\n",
     "    logging.info('conv3.shape: %s', conv3.shape.as_list())"
    ]
   },
@@ -225,22 +224,18 @@
     "    # batch normalization\n",
     "    # y = (x - batch_mean) / sqrt(batch_var + epsilon)\n",
     "    # z = scale * y + offset\n",
-    "    scale4 = tf.Variable(tf.ones([channels4]), name='scale4')\n",
-    "    offset4 = tf.Variable(tf.zeros(channels4), name='offset4')\n",
     "    mean4 = tf.Variable(tf.zeros([channels4]), trainable=False, name='mean4')\n",
     "    var4 = tf.Variable(tf.ones([channels4]), trainable=False, name='var4')\n",
-    "    batch_mean4, batch_var4 = tf.nn.moments(conv4, [0, 1, 2])\n",
     "    epsilon4 = 0.0001\n",
-    "    train_mean4 = tf.assign(mean4, mean4 * 0.999 + batch_mean4 * 0.001)\n",
-    "    train_var4 = tf.assign(var4, var4 * 0.999 + batch_var4 * 0.001)\n",
-    "    with tf.control_dependencies([train_mean4, train_var4]):\n",
-    "        conv4 = tf.nn.batch_normalization(conv4, batch_mean4, batch_var4, offset4, scale4, epsilon4)\n",
+    "    scale4 = tf.Variable(tf.ones([channels4]), name='scale4')\n",
+    "    offset4 = tf.Variable(tf.zeros(channels4), name='offset4')\n",
+    "    conv4 = tf.nn.batch_normalization(conv4, mean4, var4, offset4, scale4, epsilon4)\n",
     "    conv4 = tf.nn.relu(conv4)\n",
     "    logging.info('weight4: name=%s, shape=%s', weight4.name, weight4.shape.as_list())\n",
-    "    logging.info('scale4: name=%s, shape=%s', scale4.name, scale4.shape.as_list())\n",
-    "    logging.info('offset4: name=%s, shape=%s', offset4.name, offset4.shape.as_list())\n",
     "    logging.info('mean4: name=%s, shape=%s', mean4.name, mean4.shape.as_list())\n",
     "    logging.info('var4: name=%s, shape=%s', var4.name, var4.shape.as_list())\n",
+    "    logging.info('scale4: name=%s, shape=%s', scale4.name, scale4.shape.as_list())\n",
+    "    logging.info('offset4: name=%s, shape=%s', offset4.name, offset4.shape.as_list())\n",
     "    logging.info('conv4.shape: %s', conv4.shape.as_list())"
    ]
   },
@@ -268,22 +263,18 @@
     "    # batch normalization\n",
     "    # y = (x - batch_mean) / sqrt(batch_var + epsilon)\n",
     "    # z = scale * y + offset\n",
-    "    scale5 = tf.Variable(tf.ones([channels5]), name='scale5')\n",
-    "    offset5 = tf.Variable(tf.zeros(channels5), name='offset5')\n",
     "    mean5 = tf.Variable(tf.zeros([channels5]), trainable=False, name='mean5')\n",
     "    var5 = tf.Variable(tf.ones([channels5]), trainable=False, name='var5')\n",
-    "    batch_mean5, batch_var5 = tf.nn.moments(conv5, [0, 1, 2])\n",
     "    epsilon5 = 0.0001\n",
-    "    train_mean5 = tf.assign(mean5, mean5 * 0.999 + batch_mean5 * 0.001)\n",
-    "    train_var5 = tf.assign(var5, var5 * 0.999 + batch_var5 * 0.001)\n",
-    "    with tf.control_dependencies([train_mean5, train_var5]):\n",
-    "        conv5 = tf.nn.batch_normalization(conv5, batch_mean5, batch_var5, offset5, scale5, epsilon5)\n",
+    "    scale5 = tf.Variable(tf.ones([channels5]), name='scale5')\n",
+    "    offset5 = tf.Variable(tf.zeros(channels5), name='offset5')\n",
+    "    conv5 = tf.nn.batch_normalization(conv5, mean5, var5, offset5, scale5, epsilon5)\n",
     "    conv5 = tf.nn.relu(conv5)\n",
     "    logging.info('weight5: name=%s, shape=%s', weight5.name, weight5.shape.as_list())\n",
-    "    logging.info('scale5: name=%s, shape=%s', scale5.name, scale5.shape.as_list())\n",
-    "    logging.info('offset5: name=%s, shape=%s', offset5.name, offset5.shape.as_list())\n",
     "    logging.info('mean5: name=%s, shape=%s', mean5.name, mean5.shape.as_list())\n",
     "    logging.info('var5: name=%s, shape=%s', var5.name, var5.shape.as_list())\n",
+    "    logging.info('scale5: name=%s, shape=%s', scale5.name, scale5.shape.as_list())\n",
+    "    logging.info('offset5: name=%s, shape=%s', offset5.name, offset5.shape.as_list())\n",
     "    logging.info('conv5.shape: %s', conv5.shape.as_list())\n",
     "\n",
     "    # P5: N*13*13*256 => P3*3s2*2V => N*6*6*256\n",
@@ -320,22 +311,18 @@
     "    # batch normalization\n",
     "    # y = (x - batch_mean) / sqrt(batch_var + epsilon)\n",
     "    # z = scale * y + offset\n",
-    "    scale6 = tf.Variable(tf.ones([nodes6]), name='scale6')\n",
-    "    offset6 = tf.Variable(tf.zeros(nodes6), name='offset6')\n",
     "    mean6 = tf.Variable(tf.zeros([nodes6]), trainable=False, name='mean6')\n",
     "    var6 = tf.Variable(tf.ones([nodes6]), trainable=False, name='var6')\n",
-    "    batch_mean6, batch_var6 = tf.nn.moments(full6, [0])\n",
     "    epsilon6 = 0.0001\n",
-    "    train_mean6 = tf.assign(mean6, mean6 * 0.999 + batch_mean6 * 0.001)\n",
-    "    train_var6 = tf.assign(var6, var6 * 0.999 + batch_var6 * 0.001)\n",
-    "    with tf.control_dependencies([train_mean6, train_var6]):\n",
-    "        full6 = tf.nn.batch_normalization(full6, batch_mean6, batch_var6, offset6, scale6, epsilon6)\n",
+    "    scale6 = tf.Variable(tf.ones([nodes6]), name='scale6')\n",
+    "    offset6 = tf.Variable(tf.zeros(nodes6), name='offset6')\n",
+    "    full6 = tf.nn.batch_normalization(full6, mean6, var6, offset6, scale6, epsilon6)\n",
     "    full6 = tf.nn.relu(full6)\n",
     "    logging.info('weight6: name=%s, shape=%s', weight6.name, weight6.shape.as_list())\n",
-    "    logging.info('scale6: name=%s, shape=%s', scale6.name, scale6.shape.as_list())\n",
-    "    logging.info('offset6: name=%s, shape=%s', offset6.name, offset6.shape.as_list())\n",
     "    logging.info('mean6: name=%s, shape=%s', mean6.name, mean6.shape.as_list())\n",
     "    logging.info('var6: name=%s, shape=%s', var6.name, var6.shape.as_list())\n",
+    "    logging.info('scale6: name=%s, shape=%s', scale6.name, scale6.shape.as_list())\n",
+    "    logging.info('offset6: name=%s, shape=%s', offset6.name, offset6.shape.as_list())\n",
     "    logging.info('full6.shape: %s', full6.shape.as_list())\n",
     "\n",
     "    # D6: N*4096 => N*4096\n",
@@ -370,22 +357,18 @@
     "    # batch normalization\n",
     "    # y = (x - batch_mean) / sqrt(batch_var + epsilon)\n",
     "    # z = scale * y + offset\n",
-    "    scale7 = tf.Variable(tf.ones([nodes7]), name='scale7')\n",
-    "    offset7 = tf.Variable(tf.zeros(nodes7), name='offset7')\n",
     "    mean7 = tf.Variable(tf.zeros([nodes7]), trainable=False, name='mean7')\n",
     "    var7 = tf.Variable(tf.ones([nodes7]), trainable=False, name='var7')\n",
-    "    batch_mean7, batch_var7 = tf.nn.moments(full7, [0])\n",
     "    epsilon7 = 0.0001\n",
-    "    train_mean7 = tf.assign(mean7, mean7 * 0.999 + batch_mean7 * 0.001)\n",
-    "    train_var7 = tf.assign(var7, var7 * 0.999 + batch_var7 * 0.001)\n",
-    "    with tf.control_dependencies([train_mean7, train_var7]):\n",
-    "        full7 = tf.nn.batch_normalization(full7, batch_mean7, batch_var7, offset7, scale7, epsilon7)\n",
+    "    scale7 = tf.Variable(tf.ones([nodes7]), name='scale7')\n",
+    "    offset7 = tf.Variable(tf.zeros(nodes7), name='offset7')\n",
+    "    full7 = tf.nn.batch_normalization(full7, mean7, var7, offset7, scale7, epsilon7)\n",
     "    full7 = tf.nn.relu(full7)\n",
     "    logging.info('weight7: name=%s, shape=%s', weight7.name, weight7.shape.as_list())\n",
-    "    logging.info('scale7: name=%s, shape=%s', scale7.name, scale7.shape.as_list())\n",
-    "    logging.info('offset7: name=%s, shape=%s', offset7.name, offset7.shape.as_list())\n",
     "    logging.info('mean7: name=%s, shape=%s', mean7.name, mean7.shape.as_list())\n",
     "    logging.info('var7: name=%s, shape=%s', var7.name, var7.shape.as_list())\n",
+    "    logging.info('scale7: name=%s, shape=%s', scale7.name, scale7.shape.as_list())\n",
+    "    logging.info('offset7: name=%s, shape=%s', offset7.name, offset7.shape.as_list())\n",
     "    logging.info('full7.shape: %s', full7.shape.as_list())\n",
     "\n",
     "    # D7: N*2048 => N*2048\n",
@@ -443,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### train"
+    "### predict"
    ]
   },
   {
@@ -452,21 +435,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 1.0e-4\n",
-    "y_ = tf.cast(y_, tf.float32)\n",
-    "# y maybe 0, which will lead to cross_entropy be nan\n",
-    "#cross_entropy = tf.reduce_mean(-tf.reduce_sum(y_ * tf.log(y), axis=1))\n",
-    "#eps = 1e-10\n",
-    "#cross_entropy = tf.reduce_mean(\n",
-    "#    -tf.reduce_sum(y_ * tf.log(tf.clip_by_value(y, eps, 1.0 - eps)), axis=1))\n",
-    "y_ls = tf.nn.log_softmax(full8) # log(e^k/sigma(e^i)) = k - log(sigma(e^i)) != nan\n",
-    "cross_entropy = tf.reduce_mean(-tf.reduce_sum(y_ * y_ls, axis=1))\n",
-    "#cross_entropy = tf.reduce_mean( \\\n",
-    "#    tf.nn.softmax_cross_entropy_with_logits(labels=y_, logits=full8))\n",
-    "\n",
-    "#train_step = tf.train.GradientDescentOptimizer(learning_rate).minimize(cross_entropy)\n",
-    "train_step = tf.train.AdamOptimizer(learning_rate).minimize(cross_entropy)\n",
-    "logging.info('cross_entropy.type: %s', cross_entropy.dtype)"
+    "def predict(image):\n",
+    "    image_one_list = image.reshape(-1, *image.shape)\n",
+    "    with tf.Session() as sess:\n",
+    "        #sess.run(tf.global_variables_initializer())\n",
+    "        model = tf.train.latest_checkpoint(save_dir)\n",
+    "        saver = tf.train.Saver()\n",
+    "        saver.restore(sess, model)\n",
+    "        y_predict = sess.run(y, {x_:image_one_list})\n",
+    "        id_predict = np.argmax(y_predict)\n",
+    "        name_predict = id_name_map[id_predict]\n",
+    "        logging.info('y_predict=%s, id_predict=%d, name_predict=%s', y_predict, id_predict, name_predict)\n",
+    "        plt.figure()\n",
+    "        plt.imshow(image)\n",
+    "        plt.title(\"it's a %s\"%(name_predict))\n",
+    "    return name_predict"
    ]
   },
   {
@@ -475,74 +458,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sess = tf.InteractiveSession()\n",
-    "sess.run(tf.global_variables_initializer())\n",
-    "\n",
-    "batch_size = 8\n",
-    "\n",
-    "reader = tf.TFRecordReader()  # no need to close\n",
-    "filename_queue = tf.train.string_input_producer([train_path])\n",
-    "_, serialized_example = reader.read(filename_queue)\n",
-    "features = tf.parse_single_example(\n",
-    "    serialized_example,\n",
-    "    features = {\n",
-    "        'image_raw': tf.FixedLenFeature([], tf.string),\n",
-    "        'label': tf.FixedLenFeature([], tf.int64)\n",
-    "    }\n",
-    ")\n",
-    "image = tf.decode_raw(features['image_raw'], tf.uint8)\n",
-    "image = tf.cast(tf.reshape(image, [227, 227, 3]), tf.float32)\n",
-    "label = features['label']\n",
-    "logging.info('image.shape: %s', image.shape.as_list())\n",
-    "logging.info('label.shape: %s', label.shape.as_list())\n",
-    "\n",
-    "num_threads = 4\n",
-    "min_after_dequeue = num_threads * batch_size\n",
-    "capacity = 3 * num_threads * batch_size # 32: min_after_dequeue, 64: extra\n",
-    "image_batch, label_batch = tf.train.shuffle_batch([image, label], batch_size = batch_size, \\\n",
-    "            capacity = capacity, min_after_dequeue = min_after_dequeue, num_threads = num_threads)\n",
-    "logging.info('image_batch: dtype = %s, shape = %s', image_batch.dtype, image_batch.shape.as_list())\n",
-    "logging.info('label_batch: dtype = %s. shape = %s', label_batch.dtype, label_batch.shape.as_list())\n",
-    "\n",
-    "coord = tf.train.Coordinator()\n",
-    "threads = tf.train.start_queue_runners(sess = sess, coord = coord)\n",
-    "            \n",
-    "saver = tf.train.Saver()\n",
-    "\n",
-    "losses = []\n",
-    "\n",
-    "epoches = 1000000\n",
-    "onehot_code = [[1.0, 0.0], [0.0, 1.0]]\n",
-    "logging.info('training begin: epoches = %d', epoches)\n",
-    "t0 = time.time()\n",
-    "for epoch in range(1, epoches+1):\n",
-    "    images, labels = sess.run([image_batch, label_batch])\n",
-    "    labels = np.array([onehot_code[lbl] for lbl in labels])\n",
-    "    train_step.run({x_:images, y_:labels})\n",
-    "    t = time.time() - t0\n",
-    "    loss = cross_entropy.eval({x_:images, y_:labels})\n",
-    "    losses.append(loss)\n",
-    "    if epoch % 100 == 0:\n",
-    "        t = time.time() - t0\n",
-    "        t0 = time.time()\n",
-    "        logging.info('[epoch %6d] loss = %.6f (%.2f seconds/100 epoches)', epoch, loss, t)\n",
-    "    if epoch % 100000 == 0:\n",
-    "        logging.info('saving model to %s', save_path)\n",
-    "        saver.save(sess, save_path, global_step=epoch)\n",
-    "\n",
-    "logging.info('traing finished: total = %d', epoch)\n",
-    "logging.info('save model to %s', save_path)\n",
-    "saver.save(sess, save_path, global_step=epoch)\n",
-    "\n",
-    "coord.request_stop()\n",
-    "coord.join(threads)\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.plot(losses)\n",
-    "plt.tight_layout()\n",
-    "ple.show()\n",
-    "\n",
-    "sess.close()\n"
+    "for image_path in glob.glob(os.path.join(test_dir, '*.jpg')):\n",
+    "    image = cv2.imread(image_path)\n",
+    "    image = cv2.resize(image, size)\n",
+    "    label_predict = predict(image)\n",
+    "    logging.info('image: %s, label_predict: %s', image_path, label_predict)"
    ]
   }
  ],
